# tiny_player

./: .gitignore  Cargo.toml  application.yml  build.rs  readme.md
resources/: fullscreen_img.xcf
src/: ai_sub_title.rs  appui.rs  async_context.rs  asyncmod.rs  audio_play.rs  decode.rs  main.rs  present_data_manage.rs
tests/: is_sub_set_sum.rs  test.rs
tests/testc/: alg.cpp  algorithm.c
