[package]
name = "tiny_player"
version = "0.0.10"
edition = "2024"
description = "a tiny video player"
authors = ["Lori-Shu"]

[dependencies]
ffmpeg-the-third = "4.0.1"
rodio = "0.21.1"
bytemuck = "1.22.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
wgpu = { version = "26.0.1", default-features = false, features = ["vulkan"] }
#egui dep list
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
# 
egui_file = "0.24.0"
simple_logger = "5.0.0"
log = "0.4.27"
time = "0.3.41"
keepawake = "0.5.1"
tokio = {version = "1.48.0",features = ["full"]} 
# reqwest = "0.12.23"
# reqwest-websocket = "0.5.1"
# serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.143"
futures-util = "0.3.31"
vosk = "0.3.1"
[build-dependencies]
winresource = "0.1.23"
