[package]
name = "tiny_player"
version = "0.0.13"
edition = "2024"
description = "a tiny video player"
authors = ["Lori-Shu"]

[dependencies]
ffmpeg-the-third = "4.0.1"
rodio = "0.21.1"
bytemuck = "1.22.0"
image = { version = "0.25.9", features = ["jpeg", "png"] }
#egui dep list
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
#
egui_file = "0.24.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["local-time"]}
time = { version = "0.3.44", features = ["formatting","local-offset"] }
keepawake = "0.6.0"
tokio = { version = "1.49.0", features = ["full"] }
# reqwest = "0.12.23"
# reqwest-websocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# futures-util = "0.3.31"
candle-core = {version="0.9.1",features=["cuda"]}
candle-nn = {version="0.9.1",features=["cuda"]}
candle-transformers = {version="0.9.1"}
tokenizers = "0.22.2"
byteorder = "1.5.0"
[target.'cfg(windows)'.dependencies]
# windows = { version = "0.62.2", features = ["Win32_System_Threading","Win32_Media"] }
[build-dependencies]
winresource = "0.1.29"
# fs_extra = "1.3.0"
